--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
   font-family: 'Kanit', sans-serif;
   line-height: 0px;
   text-transform: uppercase;
+  text-shadow: -9px 1px 10px rgba(0, 0, 0, 0.75);
 }
 
 .number {
@@ -47,7 +48,7 @@
 .slopeBegin,
 .slopeEnd {
   position: absolute;
-  width: 140%;
+  width: 100%;
   height: 100%;
   cursor: pointer;
 }
